syntax = "proto3";
import "google/protobuf/timestamp.proto";

option go_package = "cowait/core/pb";

service Task {
    rpc TaskInit(TaskInitReq) returns (TaskInitReply) {}
    rpc TaskFailure(TaskFailureReq) returns (TaskFailureReply) {}
    rpc TaskComplete(TaskCompleteReq) returns (TaskCompleteReply) {}
    rpc TaskLog(stream LogEntry) returns (LogSummary) {}
}

message Header {
    string task_id = 1;
    google.protobuf.Timestamp time = 3;
}

message TaskInitReq {
    Header header = 1;
    string version = 2;
}

message TaskInitReply { }

message TaskFailureReq {
    Header header = 1;
    string error = 2;
}

message TaskFailureReply { }

message TaskCompleteReq {
    Header header = 1;
    string result = 2;
}

message TaskCompleteReply { }

message LogEntry {
    Header header = 1;
    string file = 2;
    string data = 3;
}

message LogSummary {
    int64 records = 1;
}
